// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to bottom button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_bottom_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to bottom",
        "TextRangePattern.GetText": "Scroll to bottom",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_bottom_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_bottom_button",
    "Offset": "0, 0, 0",
    "Size": "906, 29",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "402, 5, 0",
        "Size": "102, 19",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "102, 19",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to end button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_end_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to end",
        "TextRangePattern.GetText": "Scroll to end",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_end_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_end_button",
    "Offset": "0, 0, 0",
    "Size": "906, 29",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "414, 5, 0",
        "Size": "78, 19",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "78, 19",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to start button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_start_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to start",
        "TextRangePattern.GetText": "Scroll to start",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_start_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_start_button",
    "Offset": "0, 0, 0",
    "Size": "906, 29",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "412, 5, 0",
        "Size": "82, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "82, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to top button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_top_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to top",
        "TextRangePattern.GetText": "Scroll to top",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_top_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_top_button",
    "Offset": "0, 0, 0",
    "Size": "906, 29",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "415, 5, 0",
        "Size": "76, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "76, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollViews can scroll an item list horizontally 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_horizontal",
    "ControlType": 50033,
    "LocalizedControlType": "pane",
    "ScrollPattern.HorizontallyScrollable": true,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 0",
        "TextRangePattern.GetText": "Item 0",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 1",
        "TextRangePattern.GetText": "Item 1",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 2",
        "TextRangePattern.GetText": "Item 2",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 3",
        "TextRangePattern.GetText": "Item 3",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 4",
        "TextRangePattern.GetText": "Item 4",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 5",
        "TextRangePattern.GetText": "Item 5",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 6",
        "TextRangePattern.GetText": "Item 6",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 7",
        "TextRangePattern.GetText": "Item 7",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 8",
        "TextRangePattern.GetText": "Item 8",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 9",
        "TextRangePattern.GetText": "Item 9",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 10",
        "TextRangePattern.GetText": "Item 10",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 11",
        "TextRangePattern.GetText": "Item 11",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ScrollViewComponentView",
    "_Props": {
      "TestId": "scroll_horizontal",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "scroll_horizontal",
    "Offset": "0, 0, 0",
    "Size": "916, 106",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(238, 238, 238, 255)",
        },
        "Offset": "0, 0, 0",
        "Size": "916, 106",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 0)",
            },
            "Offset": "0, 0, 0",
            "Size": "1272, 106",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "1272, 106",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "1272, 106",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Offset": "5, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "10, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "111, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "116, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "217, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "222, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "323, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "328, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "429, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "434, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "535, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "540, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "641, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "646, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "747, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "752, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "853, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "858, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "959, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "964, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1065, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1070, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1171, 5, 0",
                        "Size": "96, 96",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "96, 96",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1176, 10, 0",
                        "Size": "86, 20",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "86, 20",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "-13, 0, 0",
        "Size": "12, 0",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "-12, 3, 0",
            "Opacity": 0,
            "Size": "12, 100",
            "Visual Type": "Visual",
          },
          {
            "Offset": "0, 4, 0",
            "Opacity": 0,
            "Size": "12, 12",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "0, -16, 0",
            "Opacity": 0,
            "Size": "12, 12",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "-5, 16, 0",
            "Size": "6, 74",
            "Visual Type": "Visual",
          },
        ],
      },
      {
        "Offset": "0, -13, 0",
        "Size": "0, 12",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "3, -12, 0",
            "Opacity": 0,
            "Size": "910, 12",
            "Visual Type": "Visual",
          },
          {
            "Offset": "4, 0, 0",
            "Opacity": 0,
            "Size": "12, 12",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "-16, 0, 0",
            "Opacity": 0,
            "Size": "12, 12",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "16, -5, 0",
            "Size": "637, 6",
            "Visual Type": "Visual",
          },
        ],
      },
    ],
  },
}
`;



exports[`ScrollView Tests ScrollViews has flash scroll indicators 1`] = `
{
  "Automation Tree": {
    "AutomationId": "flash_scroll_indicators_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Flash scroll indicators",
        "TextRangePattern.GetText": "Flash scroll indicators",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "flash_scroll_indicators_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "flash_scroll_indicators_button",
    "Offset": "0, 0, 0",
    "Size": "906, 28",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "387, 5, 0",
        "Size": "132, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "132, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;
